--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.atai.module</groupId>
     <artifactId>gengine</artifactId>
+    <packaging>pom</packaging>
     <version>0.0.1-SNAPSHOT</version>
+    <modules>
+        <module>g-flow</module>
+    </modules>
     <name>gengine</name>
     <description>Demo project for Spring Boot</description>
 
@@ -13,6 +17,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <spring-boot.version>2.3.7.RELEASE</spring-boot.version>
+        <flowable.version>6.6.0</flowable.version>
     </properties>
 
     <dependencies>
@@ -32,6 +37,9 @@
             <version>4.0.0-alpha-3</version>
             <type>pom</type>
         </dependency>
+
+
+
         <!-- swagger2相关依赖 -->
         <dependency>
             <groupId>io.springfox</groupId>
