add extra files

--- a/g-flow/pom.xml
+++ b/g-flow/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>flowable-engine</artifactId>
             <version>${flowable.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.3.176</version>
+        </dependency>
     </dependencies>
 
 </project>
