--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <modules>
         <module>g-flow</module>
+        <module>g-common</module>
     </modules>
     <name>gengine</name>
     <description>Demo project for Spring Boot</description>
@@ -21,6 +22,12 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.atai.module</groupId>
+            <artifactId>g-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
